crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_ask_card_answered_second_question.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 70
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25 ── ?
                                                                                                   ▕
● Assistant                                                                                        ▕
Looking at the views first.                                                                        ▕
                                                                                                   ▕
- one                                                                                              ▕
- two                                                                                              ▕
⏱ 12.4k in / 1.1k out                                                                              ▐
⏱ 38s                                                                                              ▐
                                                                                                   ▐
◆ lane-b                                                                                           ▐
the parser lane is rebased                                                                         ▐
⟳ context reset (/clear)                                                                           ▐
                                                                                                   ▐
◁ Reply done                                                                                       ▐
┌ Question 2/2 ─ Which features? ──────────────────────────────────────────────────────────────────┐
│ ▸ [ ] 1 auth                                                                                     │
│   [x] 2 billing                                                                                  │
│   [ ] o Other:                                                                                   │
│ ↑↓/1-9 pick  space toggle  o other  Tab next  Enter send  Esc later                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
