crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_ask_card_free_text.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 81
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25 ── ?
● Assistant                                                                                        ▕
Looking at the views first.                                                                        ▕
                                                                                                   ▕
- one                                                                                              ▕
- two                                                                                              ▕
⏱ 12.4k in / 1.1k out                                                                              ▕
⏱ 38s                                                                                              ▐
                                                                                                   ▐
◆ lane-b                                                                                           ▐
the parser lane is rebased                                                                         ▐
⟳ context reset (/clear)                                                                           ▐
                                                                                                   ▐
◁ Reply done                                                                                       ▐
┌ Question 1/2 ─ Which database? ──────────────────────────────────────────────────────────────────┐
│ Storage                                                                                          │
│   [ ] 1 Postgres  (the default)                                                                  │
│   [ ] 2 SQLite                                                                                   │
│ ▸ [x] o Other: mysql_                                                                            │
│ type an answer  Enter accept  Esc clear                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
