crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_delivery_states.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 442
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25  ! 1 need input — Ctrl+g


❯ You  ⧗ queued
deploy the thing

⧗ removed from queue: roll back the release


❯ You  … sending
tail the logs



❯ You  ✗ failed: no daemon connected — R retry  e edit  x drop
restart the worker





────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
